[gd_scene load_steps=3 format=3 uid="uid://btycyq7lmtyrg"]

[ext_resource type="Script" path="res://blackjack_game/scripts/player.gd" id="1_l7w4i"]

[sub_resource type="LabelSettings" id="LabelSettings_4tobt"]
font_size = 58

[node name="player" type="Node3D"]
script = ExtResource("1_l7w4i")

[node name="game_esc_menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="title" type="Label" parent="game_esc_menu"]
layout_mode = 1
offset_left = 42.0
offset_top = 30.0
offset_right = 301.0
offset_bottom = 109.0
text = "Fake Jack"
label_settings = SubResource("LabelSettings_4tobt")

[node name="VBoxContainer" type="VBoxContainer" parent="game_esc_menu"]
layout_mode = 0
offset_left = 46.0
offset_top = 137.0
offset_right = 249.0
offset_bottom = 341.0
theme_override_constants/separation = 27

[node name="resume_button" type="Button" parent="game_esc_menu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resume
"
alignment = 0

[node name="exit_to_main_menu_button" type="Button" parent="game_esc_menu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Exit to main menu"
alignment = 0

[node name="playing" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="playing"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 975.0
offset_top = 453.0
offset_right = 1112.0
offset_bottom = 606.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 27

[node name="hit_button" type="Button" parent="playing/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "HIT
"
alignment = 0

[node name="stand_button" type="Button" parent="playing/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "STAND"
alignment = 0

[node name="score_label" type="Label" parent="."]
offset_left = 540.0
offset_top = 611.0
offset_right = 580.0
offset_bottom = 634.0

[node name="restart" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="restart"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 975.0
offset_top = 453.0
offset_right = 1112.0
offset_bottom = 606.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 27

[node name="reset" type="Button" parent="restart/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RESET"
alignment = 0

[connection signal="pressed" from="game_esc_menu/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="game_esc_menu/VBoxContainer/exit_to_main_menu_button" to="." method="_on_exit_to_main_menu_button_pressed"]
[connection signal="pressed" from="playing/VBoxContainer/hit_button" to="." method="_on_hit_button_pressed"]
[connection signal="pressed" from="playing/VBoxContainer/stand_button" to="." method="_on_stand_button_pressed"]
[connection signal="pressed" from="restart/VBoxContainer/reset" to="." method="_on_reset_pressed"]
